P3/26_June/compiling_error.txt
F:\Study Material\Programs\P3\26_June\Strcmp_subseq.cpp: In function 'int main()':
F:\Study Material\Programs\P3\26_June\Strcmp_subseq.cpp:12:23: error: cannot convert 'std::__cxx11::string' {aka 'std::__cxx11::basic_string<char>'} to 'const char*'
             if(strcmp(str2,str.substr(i,j)))
                       ^~~~
In file included from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\cstring:42,
                 from c:\mingw\lib\gcc\mingw32\8.2.0\include\c++\mingw32\bits\stdc++.h:48,
                 from F:\Study Material\Programs\P3\26_June\Strcmp_subseq.cpp:1:
c:\mingw\include\string.h:77:46: note:   initializing argument 1 of 'int strcmp(const char*, const char*)'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                              ^~~~~~~~~~~~
